Fixed Router Iusse with NavLink

--- a/src/assets/scss/4-shared/layouts/_header.scss
+++ b/src/assets/scss/4-shared/layouts/_header.scss
@@ -22,7 +22,12 @@
         }
     }
     &__mainBlock{
-        display: none;
+        // display: none;
+    }
+    &__nav{
+        a{
+            color: $color-white;
+        }
     }
     &__navLines{
         display: flex;
