--- a/src/assets/scss/4-shared/layouts/_header.scss
+++ b/src/assets/scss/4-shared/layouts/_header.scss
@@ -16,9 +16,34 @@
     &__logo{
         position: absolute;
         left: calc(50% - 55px);
+        top: 0;
+        @include resp('md'){
+            left: 20px;
+        }
         &__img{
             width: 110px;
             height: 110px;
+            transition: width $time-fast, height $time-fast;
+            @include resp('md'){
+                width: 135px;
+                height: 135px;
+            }
+            @include resp('lg'){
+                width: 160px;
+                height: 160px;
+            }
+            &.smLogo{
+                width: 70px;
+                height: 70px;
+                @include resp('md'){
+                    width: 80px;
+                    height: 80px;
+                }
+                @include resp('lg'){
+                    width: 90px;
+                    height: 90px;
+                }
+            }
         }
     }
     &__mainBlock{
@@ -33,6 +58,12 @@
         align-items: center;
         justify-content: center;
         transition: left $time-fast;
+        @include resp('md'){
+            position: static;
+            flex-direction: row;
+            justify-content: space-between;
+            padding-left: 25%;
+        }
         &.visible{
             left: 0;
         }
@@ -40,10 +71,62 @@
             position: absolute;
             top: 20px;
             right: 20px;
+            @include resp('md'){
+                display: none;
+            }
             svg{
                 width: 16px;
                 height: 16px;
                 fill: $color-white;
+            }
+        }
+    }
+    &__nav{
+        display: flex;
+        flex-direction: column;
+        padding-bottom: 30px;
+        @include resp('md'){
+            flex-direction: row;
+            padding-bottom: 0;
+        }
+        a{
+            position: relative;
+            color: $color-white;
+            text-decoration: none;
+            padding: 5px 0;
+            margin-bottom: 20px;
+            text-transform: uppercase;
+            font-weight: $fw-medium;
+            @include resp('md'){
+                margin: 0 40px 0 0;
+            }
+            @include resp('lg'){
+                margin-right: 60px;
+            }
+            &:before{
+                content: "";
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                width: 0;
+                height: 2px;
+                background-color: $color-white;
+                transition: width $time-fast;
+            }
+            &:last-child{
+                margin: 0;
+            }
+            &.active{
+                &:before{
+                    width: 100%;
+                }
+            }
+            &:hover{
+                &:before{
+                    @include resp('lg'){
+                        width: 100%;
+                    }
+                }
             }
         }
     }
@@ -55,32 +138,46 @@
             height: 28px;
             border-radius: 50%;
             background-color: $color-white;
-            margin: 0 3px;
+            margin-right: 5px;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: $color-purple;
-            text-decoration: none;
-            font-size: fz(14);
-        }
-    }
-    &__nav{
-        display: flex;
-        flex-direction: column;
-        padding-bottom: 30px;
-        a{
-            color: $color-white;
-            text-decoration: none;
-            padding: 5px 0;
-            margin-bottom: 20px;
+            border: 1px solid transparent;
+            transition: border-color $time-fast, background-color $time-fast;
+            @include resp('md'){
+                margin-right: 10px;
+            }
+            @include resp('lg'){
+                margin-right: 15px;
+            }
             &:last-child{
-                margin-bottom: 0;
+                margin-right: 0;
+            }
+            svg{
+                width: 14px;
+                height: 14px;
+                fill: $color-purple;
+                transition: fill $time-fast;
+            }
+            &:hover{
+                @include resp('lg'){
+                    background-color: $color-purple;
+                    border-color: $color-white;
+                }
+                svg{
+                    @include resp('lg'){
+                        fill: $color-white;
+                    }
+                }
             }
         }
     }
     &__navLines{
         display: flex;
         flex-direction: column;
+        @include resp('md'){
+            display: none;
+        }
         &__line{
             width: 28px;
             height: 3px;
