--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -12,6 +12,7 @@
 
 // Objects
 @import '3-objects/formatting';
+@import '3-objects/button';
 
 // Shared Helper Classes
 @import '4-shared/elements/helper-classes';
