--- a/src/assets/scss/5-parts/home-page/_les-equipments.scss
+++ b/src/assets/scss/5-parts/home-page/_les-equipments.scss
@@ -18,6 +18,10 @@
         }
         &__pic{
             height: 100%;
+            max-height: 500px;
+            @include resp('lg'){
+                max-height: 650px;
+            }
             &__img{
                 @extend %image;
             }
