--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -14,10 +14,11 @@
 @import '3-objects/formatting';
 @import '3-objects/button';
 
-// Shared Helper Classes
+// Shared Elements
 @import '4-shared/elements/helper-classes';
 @import '4-shared/elements/form';
 
 // Shared Layouts
 @import '4-shared/layouts/header';
 @import '4-shared/layouts/footer';
+@import '4-shared/layouts/popup';
