--- a/src/assets/scss/4-shared/layouts/_popup.scss
+++ b/src/assets/scss/4-shared/layouts/_popup.scss
@@ -12,9 +12,12 @@
     align-items: center;
     justify-content: center;
     padding: 20px;
+    transform: scale(1.1);
+    transition: transform $time-fast;
     &.active{
         opacity: 1;
         pointer-events: all;
+        transform: scale(1);
     }
     &__inner{
         background-color: $color-white;
