--- a/src/assets/scss/1-settings/_variables.scss
+++ b/src/assets/scss/1-settings/_variables.scss
@@ -7,6 +7,7 @@ $color-white: #ffffff;
 $color-black: #000000;
 $color-error: #ff5050;
 $color-purple: #42145f;
+$color-green-ocean: #00a19a;
 $color-grey-light: #f2f2f2;
 
 // Fonts:
